# template-rust-service

./: Cargo.toml  Config.toml  Dockerfile  Makefile  README.md  book.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/src/: index.md
src/: main.rs
tests/: integration_test.rs
