[package]
name = "rust-template-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
prometheus = "0.13"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
